# nbrefactor

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  Untitled.ipynb  notebook.ipynb  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
datastructs/: __init__.py  command.py  markdown_element.py  module_node.py  parsed_cell.py
demo/: demo.ipynb
demo/examples/: sample_1.ipynb  sample_3.ipynb  sample_HiveNAS.ipynb  sample_all_features.ipynb  sample_markdown_only.ipynb
docs/: Makefile
docs/source/: about.md  api.rst  conf.py  contributing.md  examples.md  index.rst  installation.md  license.md  markdown_commands.rst  requirements.txt  usage.rst
examples/: example_notebook.ipynb  interactive_run.ipynb
fileops/: reader.py  writer.py
processor/: cda.py  parser.py  processor.py
src/: refactor.py
src/data/: __init__.py  parsed_cell.py  unparsed_cell.py
src/datastructs/: __init__.py  command.py  markdown_element.py  markdown_header.py  module_node.py  parsed_cell.py  unparsed_cell.py
src/demo/: demo.ipynb
src/fileops/: __init__.py  reader.py  writer.py
src/filesys/: __init__.py  reader.py  writer.py
src/nbrefactor/: __init__.py  cli.py
src/parser/: __init__.py  cda.py  parser.py
src/processor/: __init__.py  cda.py  parser.py  processor.py
src/utils/: __init__.py  cda.py  filesys.py  options.py  parser.py  processor.py  reader.py
src/visualization/: __init__.py  plot_module_tree.py  vis_module_tree.py
utils/: __init__.py  options.py
visualization/: __init__.py  vis_module_tree.py
(+183 files in other folders)
